--- a/app/src/main/res/layout/activity_essentialsdetails.xml
+++ b/app/src/main/res/layout/activity_essentialsdetails.xml
@@ -22,8 +22,8 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-
     <androidx.cardview.widget.CardView
+        android:id="@+id/essential_card"
         android:layout_below="@+id/essentials_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -229,6 +229,7 @@
                 </LinearLayout>
 
                 <RelativeLayout
+                    android:id="@+id/franchise_layout"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -248,11 +249,119 @@
 
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_marginRight="10dp"
+                        android:id="@+id/txt_zzproduct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <Button
+                        android:id="@+id/add_more"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_toRightOf="@+id/txt_zzproduct"
+                        android:background="@drawable/add_more_bg"
+                        android:text="Add More"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white" />
+
+
+
+                </RelativeLayout>
+
 
             </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
+    <RelativeLayout
+        android:id="@+id/add_text_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/essential_card"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Add More Essentials"
+            android:visibility="gone"
+            android:textColor="@color/apptextcolor"
+            android:textSize="20sp" />
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/serachable_spinner_layout"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
+        android:layout_below="@+id/add_text_layout"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <RelativeLayout
+            android:layout_toLeftOf="@+id/add_essentials"
+            android:background="@drawable/spinner_back"
+            android:layout_centerVertical= "true"
+            android:layout_marginLeft= "10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                android:id="@+id/search_essential"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </RelativeLayout>
+
+
+
+        <ImageView
+            android:id="@+id/add_essentials"
+            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical= "true"
+            android:src="@drawable/add_circle_black_24dp"
+            android:text="TextView" />
+
+
+    </RelativeLayout>
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rc_essentiallist"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
+        android:layout_below="@+id/serachable_spinner_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+
+
+
+
+
 
 </RelativeLayout>
