--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -3,31 +3,29 @@
     <item
         android:state_window_focused="false"
         android:state_enabled="true"
-        android:drawable="@drawable/textfield_default" />
+     />
 
     <item
         android:state_window_focused="false"
         android:state_enabled="false"
-        android:drawable="@drawable/textfield_default" />
+     />
 
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/button_shape_white" />
+       />
 
     <item
         android:state_enabled="true"
         android:state_focused="true"
-        android:drawable="@drawable/button_shape_white" />
+      />
 
     <item
         android:state_enabled="true"
-        android:drawable="@drawable/textfield_default" />
+      />
 
     <item
         android:state_focused="true"
-        android:drawable="@drawable/textfield_default" />
+       />
 
-    <item
-        android:drawable="@drawable/textfield_default" />
-
+    <item/>
 </selector>
