--- a/app/src/main/res/layout/activity_barcode_camera.xml
+++ b/app/src/main/res/layout/activity_barcode_camera.xml
@@ -38,8 +38,7 @@
         <LinearLayout
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/scannerback"/>
+            android:layout_height="match_parent"/>
 
 
         <LinearLayout
