--- a/app/src/main/res/layout/activity_create__appointment.xml
+++ b/app/src/main/res/layout/activity_create__appointment.xml
@@ -152,7 +152,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
-                                android:src="@drawable/phone_black_24dp"
+                                android:src="@drawable/ic_call"
                                 android:background="?android:attr/selectableItemBackgroundBorderless"
                                 />
                         </LinearLayout>
