--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -145,7 +145,7 @@
 
                 android:textColor="@color/login_button"
                 android:id="@+id/bt_req_otp"
-                android:background="@drawable/request_otp"
+                android:background="@drawable/request_otp_1"
                 android:layout_width="fill_parent"
                 android:layout_height="40.0dip"
                 android:layout_marginLeft="2dp"
