--- a/app/src/main/res/layout/activity_scan_qrcodefor_essential.xml
+++ b/app/src/main/res/layout/activity_scan_qrcodefor_essential.xml
@@ -8,6 +8,7 @@
 
 
     <ImageView
+        android:id="@+id/qrcode"
         android:src= "@drawable/qrcode_image1"
         android:layout_centerInParent="true"
         android:layout_width="300dp"
@@ -15,7 +16,17 @@
         />
 
 
-
+    <TextView
+        android:id="@+id/btn_submit"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        android:textColor ="@color/white"
+        android:background="@drawable/add_more_bg"
+        android:layout_marginBottom="50dp"
+        android:text="Submit reference code"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 
