--- a/app/src/main/res/layout/activity_essentialsdetails.xml
+++ b/app/src/main/res/layout/activity_essentialsdetails.xml
@@ -358,6 +358,16 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/essential_txt" />
 
+            <TextView
+                android:id="@+id/essential_price_txt"
+                android:text="Price: ₹90"
+                android:textColor="@color/common_red"
+                android:layout_below="@+id/essential_component_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+
 
         </RelativeLayout>
 
@@ -459,8 +469,8 @@
 
         <ImageView
             android:id="@+id/add_essentials"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/add_circle_black_24dp"
