--- a/app/src/main/res/layout/essential_add_more_items.xml
+++ b/app/src/main/res/layout/essential_add_more_items.xml
@@ -17,10 +17,10 @@
 
           <TextView
               android:id="@+id/essential_item"
-              android:textColor="@color/black_semi_transparent"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="TextView" />
+              android:text="TextView"
+              android:textColor="@color/black_semi_transparent" />
 
           <TextView
               android:id="@+id/essential_component"
@@ -29,7 +29,14 @@
               android:layout_height="wrap_content"
               />
 
-
+          <TextView
+              android:id="@+id/essential_price"
+              android:text="Price: ₹90"
+              android:textColor="@color/common_red"
+              android:layout_below="@+id/essential_component"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              />
 
      </RelativeLayout>
 
